--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             const btn = document.querySelector('.btn-select');
             const list = document.querySelectorAll('li');
 
-            // 버튼 클릭 시 토글 보이고, 다른 곳 누르면 토글 숨김
+            // 리스트 열고 닫기
             document.addEventListener('click', (e) => {
                 if (btn.contains(e.target)) {
                     btn.classList.toggle('on');
