--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <script>
             const btn = document.querySelector('.btn-select');
-            const list = document.querySelectorAll('li');
+            const item = document.querySelectorAll('li');
 
             // 리스트 열고 닫기
             document.addEventListener('click', (e) => {
@@ -115,9 +115,9 @@
             });
 
             // 선택한 항목으로 텍스트 변경
-            list.forEach((item) => {
-                list.addEventListener('click', () => {
-                    btn.textContent = list.textContent;
+            item.forEach((item) => {
+                item.addEventitemener('click', () => {
+                    btn.textContent = item.textContent;
                 });
             });
         </script>
